--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "simple rest service in node.js",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "serve": "node bin/index.js",
+    "serve": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +21,10 @@
   "devDependencies": {
     "@types/connect": "^3.4.30",
     "@types/node": "^7.0.13",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^1.2.2",
+    "gulp-exec": "^2.1.3",
+    "gulp-typescript": "^3.1.6",
     "typescript": "^2.2.2"
   }
 }
